--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,11 +1,10 @@
 header {
-    background-color: aliceblue;
     grid-area: header;
     display: flex;
     align-items: center;
     background-color: var(--header-background-color);
     color: var(--header-text-color);
-    z-index: 10;
+    z-index: var(--z-header);
     box-shadow: 0 2px 5px 0 var(--header-shadow-1), 0 2px 10px 0 var(--header-shadow-2);
 }
 
@@ -14,7 +13,7 @@ header {
     width: 100%;
     text-align: center;
     font-weight: normal;
-    z-index: 0;
+    z-index: var(--z-base);
 }
 
 .title {
