--- a/src/components/NextPreviousComponent.css
+++ b/src/components/NextPreviousComponent.css
@@ -7,6 +7,9 @@
     text-transform: uppercase;
     font-weight: 400;
     background-color: var(--header-background-color);
+    padding-bottom: env(safe-area-inset-bottom);
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
 }
 
 .previous-link {
